--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
-body {
-    height: 100vh;
-}
-
 .navbar {
     display: flex;
     width: 100%;
@@ -16,6 +12,8 @@ body {
     margin: auto;
     padding: 30px;
     align-items: center;
+    position: fixed;
+    z-index: 10;
 }
 
 ul {
@@ -37,7 +35,7 @@ a {
 }
 
 a:hover {
-    color: rgb(45, 114, 43);
+    color: rgb(50, 116, 48);
     animation-duration: 2s;
     transition: 0.2s;
 }
@@ -52,7 +50,7 @@ a:hover {
     margin-left: 34vh;
 }
 
-.logo-text:hover{
+.logo-text:hover {
     animation-name: pulse;
     animation-duration: 1.2s;
     animation-iteration-count: infinite;
@@ -63,12 +61,13 @@ a:hover {
     flex-direction: row;
     align-items: center;
     gap: 10px;
-    margin-left: 480px;
+    margin-left: 420px;
 }
 
 .map-icon {
     display: flex;
     width: 20px;
+    margin-left: 20px;
 }
 
 .map-icon:hover {
@@ -77,7 +76,7 @@ a:hover {
     animation-iteration-count: infinite;
 }
 
-p {
+h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     font-weight: bold;
@@ -85,7 +84,21 @@ p {
     cursor: pointer;
 }
 
-p:hover {
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+h1:hover {
+    color: rgb(110, 113, 109);
+    animation-duration: 2s;
+    transition: 0.2s;
+}
+
+h2:hover {
     color: rgb(110, 113, 109);
     animation-duration: 2s;
     transition: 0.2s;
@@ -100,12 +113,50 @@ p:hover {
         transform: rotate3d(0, 1, 0, -180deg);
     }
 }
-    
-    @keyframes pulse {
-        0% {
-          transform: scale3d(1, 1, 1); }
-        50% {
-          transform: scale3d(1.1, 1.1, 1.1); }
-        100% {
-          transform: scale3d(1, 1, 1); } }
-      
+
+@keyframes pulse {
+    0% {
+        transform: scale3d(1, 1, 1);
+    }
+
+    50% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+
+    100% {
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+.hero {
+    display: flex;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.445)), url(CoffeeShopLatte_484934bf-4ca5-4c8d-b20f-d2b5829a1e06.png);
+    height: 700px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.hero-text {
+    text-align: center;
+}
+
+.form {
+    border: 2px solid #ffffff;
+    border-radius: 8px;
+    background-color: #ffffff;
+    margin: 0 110vh 0 0;
+    padding: 10px;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    box-sizing: border-box;
+    min-width: max-content;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    ;
+
+}
