--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,48 @@ label {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.footer {
+    display: flex;
+    width: 100%;
+    background: #26462c98;
+    padding: 50px;
+}
+
+.col-1,
+.col-2,
+.col-3 {
+    flex-grow: 2;
+}
+
+.col-1 a,
+.col-2 a,
+.col-3 a {
+    display: block;
+    text-decoration: none;
+    color: #efefef;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 100;
+    letter-spacing: -0.5px;
+}
+
+.footer div h3 {
+    margin-bottom: 30px;
+    font-size: 20px;
+    color: #dbf3d7;
+}
+
+.social-icons {
+    margin-top: 10px;
+    color: #efefef;
+}
+
+.social-icons i {
+    font-size: 30px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 480px) {
 
     .navbar {
@@ -203,6 +245,6 @@ label {
         background-position: right;
         flex-wrap: wrap;
         position: fixed;
+    } 
 
-    }
 }
